if(NOT DEFINED TIGAME_EXTENSIONS_TO_BUILD)
set(TIGAME_EXTENSIONS_TO_BUILD "items;test")
endif()

foreach(dir ${TIGAME_EXTENSIONS_TO_BUILD})
    if(NOT IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${dir})
        message(SEND_ERROR "No such extension ${dir} (could not find ${CMAKE_CURRENT_SOURCE_DIR}/${dir})")
    else()
        FILE(GLOB dirsrc ${dir}/*.c)
        add_library(${dir} SHARED ${dirsrc})
        set_property(TARGET ${dir} PROPERTY PREFIX "ext")
        install(TARGETS ${dir} DESTINATION extensions)
    endif()
endforeach()