
MACRO(SUBDIRLIST result curdir)
    file(GLOB children RELATIVE ${curdir} ${curdir}/*)
    set(dirlist "")
    FOREACH(child ${children})
        IF(IS_DIRECTORY ${curdir}/${child})
            list(APPEND dirlist ${child})
        ENDIF()
    ENDFOREACH()
    set(${result} ${dirlist})
ENDMACRO()

if((NOT DEFINED TIGAME_EXTENSIONS_TO_BUILD) OR (TIGAME_EXTENSIONS_TO_BUILD EQUAL "all"))
    SUBDIRLIST(TIGAME_EXTENSIONS_TO_BUILD ${CMAKE_CURRENT_SOURCE_DIR})
    message(STATUS "Enabling extensions ${TIGAME_EXTENSIONS_TO_BUILD}")
endif()

foreach(dir ${TIGAME_EXTENSIONS_TO_BUILD})
    if(NOT IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${dir})
        message(SEND_ERROR "No such extension ${dir} (could not find ${CMAKE_CURRENT_SOURCE_DIR}/${dir})")
    else()
        FILE(GLOB dirsrc ${dir}/*.c)
        add_library(${dir} SHARED ${dirsrc})
        set_property(TARGET ${dir} PROPERTY PREFIX "ext")
        target_link_libraries(${dir} random io collect shadenbt m)
        install(TARGETS ${dir} DESTINATION extensions)
    endif()
endforeach()